; ModuleID = '/home/carl/AnghaBench/streem/src/extr_io.c_write_close.c'
source_filename = "/home/carl/AnghaBench/streem/src/extr_io.c_write_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }
%struct.write_data = type { i32, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32 }

@STRM_IO_READING = common dso_local global i32 0, align 4
@STRM_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*, i32)* @write_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @write_close(%struct.TYPE_5__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.write_data*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = inttoptr i64 %8 to %struct.write_data*
  store %struct.write_data* %9, %struct.write_data** %5, align 8
  %10 = load %struct.write_data*, %struct.write_data** %5, align 8
  %11 = getelementptr inbounds %struct.write_data, %struct.write_data* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = call i32 @fileno(i32 %12)
  %14 = call i32 @shutdown(i32 %13, i32 1)
  %15 = load %struct.write_data*, %struct.write_data** %5, align 8
  %16 = getelementptr inbounds %struct.write_data, %struct.write_data* %15, i32 0, i32 1
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* @STRM_IO_READING, align 4
  %21 = and i32 %19, %20
  %22 = icmp eq i32 %21, 0
  br i1 %22, label %23, label %28

23:                                               ; preds = %2
  %24 = load %struct.write_data*, %struct.write_data** %5, align 8
  %25 = getelementptr inbounds %struct.write_data, %struct.write_data* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = call i32 @fclose(i32 %26)
  br label %28

28:                                               ; preds = %23, %2
  %29 = load %struct.write_data*, %struct.write_data** %5, align 8
  %30 = call i32 @free(%struct.write_data* %29)
  %31 = load i32, i32* @STRM_OK, align 4
  ret i32 %31
}

declare dso_local i32 @shutdown(i32, i32) #1

declare dso_local i32 @fileno(i32) #1

declare dso_local i32 @fclose(i32) #1

declare dso_local i32 @free(%struct.write_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
